--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "lint": "npm run lint:prettier",
     "lintfix": "prettier --write --list-different ."
   },
+
   "dependencies": {
     "@nuxtjs/pwa": "^3.3.5",
     "@studio-freight/lenis": "^1.0.16",
     "core-js": "^3.25.3",
     "flickity": "^3.0.0",
     "gsap": "^3.12.2",
+    "mouse-follower": "^1.1.2",
     "nuxt": "^2.15.8",
     "nuxt-route-meta": "^2.3.6",
     "swiper": "^10.2.0",
@@ -25,6 +27,7 @@
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
   },
+  
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "eslint-config-prettier": "^8.5.0",
