--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@nuxtjs/pwa": "^3.3.5",
-    "@nuxtjs/toast": "^3.3.1",
     "@studio-freight/lenis": "^1.0.16",
     "core-js": "^3.25.3",
     "flickity": "^3.0.0",
     "gsap": "^3.12.2",
+    "lottie-web": "^5.12.2",
     "mouse-follower": "^1.1.2",
     "nuxt": "^2.15.8",
     "nuxt-route-meta": "^2.3.6",
@@ -26,6 +26,7 @@
     "swiper": "^10.2.0",
     "vue": "^2.7.10",
     "vue-easy-slider": "^5.3.4",
+    "vue-lottie": "^0.2.1",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
   },
